Closed Bug 793494 Opened 13 years ago Closed 13 years ago

Non-libxul code can't include nsIWidget.h

Categories

(Core :: Widget, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla18

People

(Reporter: neil, Assigned: neil)

References

Details

Attachments

(1 file)

Bug 450765 lazily included nsRegion.h into nsIWidget.h in order to declare a const nsIntRect& parameter. Bug 777194 then included nsString.h into nsRegion.h in order to declare an nsCString return value. However this prevents nsIWidget.h from being included in non-libxul code. Since nsIWidget.h doesn't need to know the complete type of nsIntRect we can replace the include with a forward declaration. This breaks compilation of comm-central with the --with-libxul-sdk option.
Attached patch Proposed patchSplinter Review
Assignee: nobody → neil
Status: NEW → ASSIGNED
Attachment #663816 - Flags: review?(roc)
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
Target Milestone: --- → mozilla18
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: