Bug 793494 Allow non-libxul code to include nsIWidget.h again r=roc